add launchMode to activities add parent for AddEditActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddEditActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".AddEditActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
